--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@200;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Site do Rahel</title>
   </head>
   <body class="bg-dark font-serif w-screen">
     <div id="root"></div>
