--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript, React, Dev, Portifolio">
     <meta name="author" content="Rahel Martim">
 
+    <link rel="preload" as="image" href="img/avatar.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@200;400;500;600;700;800;900&display=swap" rel="stylesheet">
