--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preload" as="image" href="./img/neide/neide-max.jpg">
     <link rel="preload" as="image" href="./img/neide/neide-mini.jpg">
 
-    <link rel="preload" as="image" href="./img/trybe/trybe-max.jpg">
+    <link rel="preload" as="image" href="./img/trybe/trybe-max-1.jpg">
     <link rel="preload" as="image" href="./img/trybe/trybe-mini.jpg">
 
     <link rel="preload" as="image" href="./img/vc/vc-max.jpg">
