--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="preload" as="image" href="./img/esports/esports-max.jpg">
     <link rel="preload" as="image" href="./img/esports/esports-mini.jpg">
 
-    <link rel="preload" as="image" href="./img/neide/neide-max.jpg">
+    <link rel="preload" as="image" href="./img/neide/neide-max-1.jpg">
     <link rel="preload" as="image" href="./img/neide/neide-mini.jpg">
 
-    <link rel="preload" as="image" href="./img/trybe/trybe-max-1.jpg">
+    <link rel="preload" as="image" href="./img/trybe/trybe-max.jpg">
     <link rel="preload" as="image" href="./img/trybe/trybe-mini.jpg">
 
     <link rel="preload" as="image" href="./img/vc/vc-max.jpg">
