--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@200;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Site do Rahel</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
   </head>
   <body class="bg-dark font-serif w-screen">
     <div id="root"></div>
